--- a/src/index.html
+++ b/src/index.html
@@ -335,6 +335,10 @@
                 <input type="tel" name="tel" placeholder="Номер телефона" class="form__field" required>
                 <input type="text" name="city" placeholder="Город" class="form__field">
                 <input type="text" name="message" placeholder="Сообщение" class="form__field">
+                <div class="group-check">
+                  <input type="checkbox" name="checkbox2" id="checkbox2" required>
+                  <label for="checkbox2">Я ознакомился с политикой конфиденциальности и даю свое соглашение на обработку данных</label>
+                </div>
                 <input type="submit" value="Отправить заявку" class="form__btn button button_light">
               </form>
             </div>
