--- a/src/html/serviceCard.html
+++ b/src/html/serviceCard.html
@@ -1,4 +1,4 @@
-<a class="services__card" href="">
+<a class="services__card" href="" data-aos="fade-up" data-aos-delay="@@index">
   <div class="services__card-img"><img src="@img/service-1.png" alt="Preview service"></div>
   <div class="services__card-box">
     <h4 class="services__card-caption">Имплантологи</h4>
