--- a/src/html/educationalCard.html
+++ b/src/html/educationalCard.html
@@ -1,4 +1,4 @@
-<div class="educational__card">
+<div class="educational__card" data-aos="fade-up" data-aos-delay="@@index">
   <div class="educational__img"><img src="@img/educational-1.png" alt="educational image"></div>
   <div class="educational__box">
     <div class="educational__col">
