--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" data-aos="fade-down">
   <div class="container">
     <div class="header__container">
       <a href="/" class="header__logo">
