--- a/src/index.html
+++ b/src/index.html
@@ -69,20 +69,20 @@
             </div>
             <div class="cooperation__box">
               <img src="@img/cooper.png" alt="cooperation image">
-              <div class="cooperation__benefits">
-                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="100">
+              <div class="cooperation__benefits" data-aos="fade-up">
+                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="150">
                   <div class="cooperation__num">150+</div>
                   <div class="cooperation__txt">постоянных клиентов</div>
                 </div>
-                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="150">
+                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="250">
                   <div class="cooperation__num">200+</div>
                   <div class="cooperation__txt">отзывов</div>
                 </div>
-                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="200">
+                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="350">
                   <div class="cooperation__num">10</div>
                   <div class="cooperation__txt">лет на рынке</div>
                 </div>
-                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="250">
+                <div class="cooperation__item" data-aos="fade-up" data-aos-delay="450">
                   <div class="cooperation__num">20</div>
                   <div class="cooperation__txt">сотрудников</div>
                 </div>
