--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,10 +1,10 @@
-<header class="header" data-aos="fade-down">
+<header class="header">
   <div class="container">
     <div class="header__container">
       <a href="/" class="header__logo">
         <picture>
-          <source srcset="@img/logo-mb.png" media="(max-width: 767px)">
-          <img src="@img/logo.png" alt="Header Logo" />
+          <source srcset="@img/logo-mb.svg" media="(max-width: 767px)">
+          <img src="@img/logo.svg" alt="Header Logo" />
         </picture>
       </a>
       <div class="header__user">
