--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
           <div class="cooperation__container">
             <div class="cooperation__top">
               <h2 class="cooperation__title title-up">Сотрудничество</h2>
-              <div class="cooperation__desc" data-aos="fade-left">
+              <div class="cooperation__desc">
                 <div class="cooperation__caption">В целом, конечно, сложившаяся структура организации обеспечивает актуальность вывода</div>
                 <p>В целом, конечно, сложившаяся структура организации обеспечивает актуальность вывода текущих активов.</p>
               </div>
