--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <body>
     @@include('html/header.html')
 
+    <!-- добавить классы для main врачей "main-doctor" -->
+    <!-- добавить классы для main пациента "main-patient" -->
     <main>
       <section class="hero section-top section-pad-bottom">
         <div class="container">
@@ -41,22 +43,7 @@
           </div>
         </div>
       </section>
-      <section class="services section-pad">
-        <div class="container">
-          <div class="services__container">
-            <div class="services__top">
-              <h2 class="services__title title-up">Услуги</h2>
-              <div class="services__desc">В целом, конечно, сложившаяся структура организации обеспечивает актуальность вывода текущих активов.</div>
-            </div>
-            <div class="services__cards">
-              @@include('html/serviceCard.html', { "index": "100" })
-              @@include('html/serviceCard.html', { "index": "200" })
-              @@include('html/serviceCard.html', { "index": "300" })
-            </div>
-            <a href="" class="services__link">Все услуги</a>
-          </div>
-        </div>
-      </section>
+      @@include('html/services.html') 
       <section class="cooperation section-pad">
         <div class="container">
           <div class="cooperation__container">
@@ -92,35 +79,7 @@
           </div>
         </div>
       </section>
-      <section class="reviews section-pad-bottom">
-        <div class="container">
-          <div class="reviews__container">
-            <h2 class="reviews__title title-up">Отзывы</h2>
-            <div class="reviews__slider">
-              <div class="swiper reviewsSwiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">@@include('html/reviewsCard.html')</div>
-                  <div class="swiper-slide">@@include('html/reviewsCard.html')</div>
-                  <div class="swiper-slide">@@include('html/reviewsCard.html')</div>
-                  <div class="swiper-slide">@@include('html/reviewsCard.html')</div>
-                  <div class="swiper-slide">@@include('html/reviewsCard.html')</div>
-                </div>
-                <div class="swiper-button swiper-button-next reviews-button-next">
-                  <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.9602 9.36567L5.9519 0.245066C5.62348 -0.0816885 5.09085 -0.0816885 4.76243 0.245066C4.43401 0.571794 4.43401 1.10195 4.76243 1.4287L14.1673 10L4.76326 18.5713C4.43484 18.898 4.43484 19.4282 4.76326 19.7549C5.09168 20.0817 5.62431 20.0817 5.95271 19.7549L15.961 10.6343C16.1361 10.4601 16.2111 10.2292 16.1994 10.0008C16.2103 9.77161 16.1353 9.54071 15.9602 9.36567Z" fill="white"/>
-                  </svg>                                      
-                </div>
-                <div class="swiper-button swiper-button-prev reviews-button-prev">
-                  <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4.7566 10.6343L14.7649 19.7549C15.0933 20.0817 15.6259 20.0817 15.9544 19.7549C16.2828 19.4282 16.2828 18.8981 15.9544 18.5713L6.54953 9.99999L15.9535 1.42871C16.282 1.10195 16.282 0.571796 15.9535 0.245068C15.6251 -0.0816612 15.0925 -0.0816612 14.7641 0.245068L4.75577 9.36567C4.58073 9.53986 4.50568 9.77078 4.51737 9.99916C4.50649 10.2284 4.58151 10.4593 4.7566 10.6343Z" fill="white"/>
-                  </svg>                                      
-                </div>
-              </div>
-            </div>
-            <a class="reviews__btn button button_border" href="#">Оставить отзыв</a>
-          </div>
-        </div>
-      </section>
+      @@include('html/reviews.html') 
       <section class="knowledge section-pad">
         <div class="container">
           <div class="knowledge__container">
@@ -259,92 +218,8 @@
           </div>
         </div>
       </section>
-      <section class="branches section-pad">
-        <div class="container">
-          <div class="branches__container">
-            <div class="branches__top">
-              <div class="branches__headers">
-                <h2 class="branches__title title-color title-up"><strong>11 центров</strong> в Казахстане</h2>
-                <h2 class="branches__title title-color title-up"><strong>Новый центр</strong> в кыргызстане</h2>
-              </div>
-              <a href="" class="branches__btn button button_light">Смотреть все</a>
-            </div>
-            <div class="branches__accordion swiper accordion-slider">
-              <div class="swiper-wrapper branches__wrapper">
-                <div class="branches__item accordion-item swiper-slide">
-                  <button class="branches__caption accordion-button">
-                    <span>г. Астана</span>
-                    <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M23.501 11.0007L13.7786 11.0301V1.49901C13.7786 0.668541 13.11 0 12.2796 0C11.4494 0 10.7806 0.668541 10.7806 1.49901L10.8099 11.001H1.49901C0.668541 11.001 0 11.6695 0 12.5C0 13.3302 0.668541 13.9987 1.49901 13.9987H10.7952V23.501C10.7952 24.3309 11.4638 25 12.2943 25C13.1247 25 13.7933 24.3309 13.7933 23.501V13.999H23.501C24.3315 13.999 25 13.3299 25 12.5C25 11.6693 24.324 11.0007 23.501 11.0007Z" fill="white"/>
-                    </svg>                  
-                  </button>
-                  <div class="branches__content accordion-content">
-                    <div class="branches__info">
-                      <p>ул. Кобылай Батыра, 12</p>
-                      <p>+7 701 224 2430</p>
-                      <p>3dtonomag@gmail.com</p>
-                      <br>
-                      <p>ул. Кобылай Батыра, 12</p>
-                      <p>+7 701 224 2430</p>
-                      <p>3dtonomag@gmail.com</p>
-                      <br>
-                      <p>ул. Кобылай Батыра, 12</p>
-                      <p>+7 701 224 2430</p>
-                      <p>3dtonomag@gmail.com</p>
-                    </div>
-                    <div class="branches__map"><img src="@img/map.png" alt="map"></div>
-                  </div>
-                </div>
-                <div class="branches__item accordion-item swiper-slide">
-                  <button class="branches__caption accordion-button">
-                    <span>г. Караганда</span>
-                    <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M23.501 11.0007L13.7786 11.0301V1.49901C13.7786 0.668541 13.11 0 12.2796 0C11.4494 0 10.7806 0.668541 10.7806 1.49901L10.8099 11.001H1.49901C0.668541 11.001 0 11.6695 0 12.5C0 13.3302 0.668541 13.9987 1.49901 13.9987H10.7952V23.501C10.7952 24.3309 11.4638 25 12.2943 25C13.1247 25 13.7933 24.3309 13.7933 23.501V13.999H23.501C24.3315 13.999 25 13.3299 25 12.5C25 11.6693 24.324 11.0007 23.501 11.0007Z" fill="white"/>
-                    </svg> 
-                  </button>
-                  <div class="branches__content accordion-content">
-                    <div class="branches__info">
-                      <p>ул. Кобылай Батыра, 12</p>
-                      <p>+7 701 224 2430</p>
-                      <p>3dtonomag@gmail.com</p>
-                      <br>
-                      <p>ул. Кобылай Батыра, 12</p>
-                      <p>+7 701 224 2430</p>
-                      <p>3dtonomag@gmail.com</p>
-                      <br>
-                      <p>ул. Кобылай Батыра, 12</p>
-                      <p>+7 701 224 2430</p>
-                      <p>3dtonomag@gmail.com</p>
-                    </div>
-                    <div class="branches__map"><img src="@img/map.png" alt="map"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="feedback section-pad">
-        <div class="container">
-          <div class="feedback__container">
-            <h2 class="feedback__title title-up"><strong>Заполните форму,</strong> чтобы связаться с нами</h2>
-            <div class="feedback__form">
-              <form action="">
-                <input type="text" name="name" placeholder="Имя" class="form__field" required>
-                <input type="email" name="email" placeholder="E-mail" class="form__field">
-                <input type="tel" name="tel" placeholder="Номер телефона" class="form__field" required>
-                <input type="text" name="city" placeholder="Город" class="form__field">
-                <input type="text" name="message" placeholder="Сообщение" class="form__field">
-                <div class="group-check">
-                  <input type="checkbox" name="checkbox2" id="checkbox2" required>
-                  <label for="checkbox2">Я ознакомился с политикой конфиденциальности и даю свое соглашение на обработку данных</label>
-                </div>
-                <input type="submit" value="Отправить заявку" class="form__btn button button_light">
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
+      @@include('html/branches.html') 
+      @@include('html/feedback.html') 
     </main>
 
     @@include('html/footer.html') 
