--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews section-pad-bottom">
+<section class="reviews section-pad">
   <div class="container">
     <div class="reviews__container">
       <h2 class="reviews__title title-up">Отзывы</h2>
