--- a/src/html/webinar.html
+++ b/src/html/webinar.html
@@ -1,8 +1,8 @@
-<section class="webinar section-pad-top">
+<section class="webinar section-pad-bottom">
   <div class="container">
     <div class="webinar__container">
       <div class="webinar__content">
-        <h2 class="webinar__title title-color">Запишитесь <br> на <strong>онлайн вебинар</strong></h2>
+        <h2 class="webinar__title title-color title-up">Запишитесь <br> на <strong>онлайн вебинар</strong></h2>
         <div class="webinar__desc">
           <p>Ясность нашей позиции очевидна: базовый вектор развития играет определяющее значение для вывода текущих активов.</p>
         </div>
