--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         </div>
       </section>
       @@include('html/services.html') 
-      <section class="cooperation section-pad">
+      <section class="cooperation section-pad-top">
         <div class="container">
           <div class="cooperation__container">
             <div class="cooperation__top">
@@ -125,7 +125,7 @@
           </div>
         </div>
       </section>
-      <section class="educational section-pad-top">
+      <section class="educational section-pad">
         <div class="container">
           <div class="educational__container">
             <div class="educational__top">
