--- a/src/services-ct.html
+++ b/src/services-ct.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html', { "title": "Снимок ЧЛО" })
+  @@include('html/head.html', { "title": "КТ двух челюстей в Астане" })
   <body>
     @@include('html/header.html')
 
@@ -119,7 +119,7 @@
         <div class="container">
           <div class="services-diagnostics__container">
             <h2 class="services-diagnostics__title title-up">Как проходит диагностика?</h2>
-            <a class="services-diagnostics__video" href="">
+            <a class="services-diagnostics__video video" href="">
               <img src="@img/diagn.png" alt="">
             </a>
           </div>
