--- a/src/educational.html
+++ b/src/educational.html
@@ -19,7 +19,7 @@
                 <span class="num">01</span>
                 <div class="educational-page__box">
                   <h3 class="educational-page__caption">Курс мероприятие</h3>
-                  <!-- max кол-во символов -->
+                  <!-- 97 max кол-во символов -->
                   <div class="educational-page__txt">Как принято считать, интерактивные прототипы объективно рассмотрены соответствующими инстанциями.</div>
                   <a href="" class="educational-page__link">
                     <span>Подробнее</span>
@@ -35,7 +35,7 @@
                 <span class="num">02</span>
                 <div class="educational-page__box">
                   <h3 class="educational-page__caption">Курс мероприятие</h3>
-                  <!-- max кол-во символов -->
+                  <!-- 97 max кол-во символов -->
                   <div class="educational-page__txt">Как принято считать, интерактивные прототипы объективно рассмотрены соответствующими инстанциями.</div>
                   <a href="" class="educational-page__link">
                     <span>Подробнее</span>
