--- a/src/html/head.html
+++ b/src/html/head.html
@@ -6,4 +6,6 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+
+  <link rel="shortcut icon" href="@img/favicon.png" type="image/png">
 </head>
