--- a/src/about.html
+++ b/src/about.html
@@ -149,7 +149,7 @@
                 </a>
               </div>
             </div>
-            <a class="follow__video video" href=""><img src="@img/follow.png" alt=""></a>
+            <a class="follow__video video" data-fancybox href="https://youtu.be/krDWc30PAGg?si=hi0BgOOTnJCy66kL"><img src="@img/follow.png" alt=""></a>
           </div>
         </div>
       </section>
