--- a/src/educational.html
+++ b/src/educational.html
@@ -28,7 +28,7 @@
                     </svg>                      
                   </a>
                 </div>
-                <a class="educational-page__video video" href=""><img src="@img/educational-2.png" alt=""></a>
+                <a class="educational-page__video video" data-fancybox href="https://youtu.be/krDWc30PAGg?si=hi0BgOOTnJCy66kL"><img src="@img/educational-2.png" alt=""></a>
                 <div class="educational-page__meta">20 августа 17:00</div>
               </div>
               <div class="educational-page__card">
@@ -44,7 +44,7 @@
                     </svg>                      
                   </a>
                 </div>
-                <a class="educational-page__video video" href=""><img src="@img/educational-2.png" alt=""></a>
+                <a class="educational-page__video video" data-fancybox href="https://youtu.be/krDWc30PAGg?si=hi0BgOOTnJCy66kL"><img src="@img/educational-2.png" alt=""></a>
                 <div class="educational-page__meta">20 августа 17:00</div>
               </div>
             </div>
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="invite__container">
             <h2 class="invite__title title-up title-color">Приглашаем <strong>тебя</strong> в наш центр</h2>
-            <a class="invite__video video" href="">
+            <a class="invite__video video" data-fancybox href="https://youtu.be/krDWc30PAGg?si=hi0BgOOTnJCy66kL">
               <img src="@img/diagn.png" alt="">
             </a>
           </div>
