--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -8,47 +8,47 @@
         </div>
         <!-- Цикл -->
         <!-- Если фото нет, то не выводить -->
-        <div class="benefits__card">
+        <a class="benefits__card" href="">
           <img src="@img/benefits-1.png" alt="">
           <h4 class="benefits__caption">на 80%</h4>
           <div class="benefits__txt">Доза облучения значительно ниже, чем при обычной КТ</div>
-          <a href="" class="benefits__btn button">
+          <div class="benefits__btn button">
             <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.92079 0.125C4.77161 0.125 4.62854 0.184263 4.52305 0.289752C4.41756 0.395242 4.35829 0.538316 4.35829 0.6875C4.35829 0.836684 4.41756 0.979758 4.52305 1.08525C4.62854 1.19074 4.77161 1.25 4.92079 1.25H14.8129L1.14811 14.9148C0.928496 15.1345 0.928496 15.4906 1.14811 15.7102C1.36777 15.9299 1.72388 15.9299 1.94354 15.7102L15.6083 2.04543V11.9376C15.6083 12.0867 15.6676 12.2298 15.7731 12.3353C15.8786 12.4408 16.0217 12.5001 16.1708 12.5001C16.32 12.5001 16.4631 12.4408 16.5686 12.3353C16.6741 12.2298 16.7333 12.0867 16.7333 11.9376V0.687556C16.7333 0.538376 16.6741 0.395311 16.5686 0.289825C16.4631 0.184339 16.32 0.125071 16.1708 0.125056L4.92079 0.125Z" fill="white"/>
             </svg>                    
-          </a>
-        </div>
-        <div class="benefits__card">
+          </div>
+        </a>
+        <a class="benefits__card" href="">
           <img src="@img/benefits-2.png" alt="">
           <h4 class="benefits__caption">ТРГ</h4>
           <div class="benefits__txt">Цефалометрическое изображение для ортодонтов</div>
-          <a href="" class="benefits__btn button">
+          <div class="benefits__btn button">
             <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.92079 0.125C4.77161 0.125 4.62854 0.184263 4.52305 0.289752C4.41756 0.395242 4.35829 0.538316 4.35829 0.6875C4.35829 0.836684 4.41756 0.979758 4.52305 1.08525C4.62854 1.19074 4.77161 1.25 4.92079 1.25H14.8129L1.14811 14.9148C0.928496 15.1345 0.928496 15.4906 1.14811 15.7102C1.36777 15.9299 1.72388 15.9299 1.94354 15.7102L15.6083 2.04543V11.9376C15.6083 12.0867 15.6676 12.2298 15.7731 12.3353C15.8786 12.4408 16.0217 12.5001 16.1708 12.5001C16.32 12.5001 16.4631 12.4408 16.5686 12.3353C16.6741 12.2298 16.7333 12.0867 16.7333 11.9376V0.687556C16.7333 0.538376 16.6741 0.395311 16.5686 0.289825C16.4631 0.184339 16.32 0.125071 16.1708 0.125056L4.92079 0.125Z" fill="white"/>
             </svg>                    
-          </a>
-        </div>
+          </div>
+        </a>
         <!-- Если нет фото, то карточке добавить класс "benefits__card_dark" -->
-        <div class="benefits__card benefits__card_dark">
+        <a class="benefits__card benefits__card_dark" href="">
           <!-- <img src="" alt=""> -->
           <h4 class="benefits__caption">на 80%</h4>
           <div class="benefits__txt">Доза облучения значительно ниже, чем при обычной КТ</div>
-          <a href="" class="benefits__btn button">
+          <div class="benefits__btn button">
             <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.92079 0.125C4.77161 0.125 4.62854 0.184263 4.52305 0.289752C4.41756 0.395242 4.35829 0.538316 4.35829 0.6875C4.35829 0.836684 4.41756 0.979758 4.52305 1.08525C4.62854 1.19074 4.77161 1.25 4.92079 1.25H14.8129L1.14811 14.9148C0.928496 15.1345 0.928496 15.4906 1.14811 15.7102C1.36777 15.9299 1.72388 15.9299 1.94354 15.7102L15.6083 2.04543V11.9376C15.6083 12.0867 15.6676 12.2298 15.7731 12.3353C15.8786 12.4408 16.0217 12.5001 16.1708 12.5001C16.32 12.5001 16.4631 12.4408 16.5686 12.3353C16.6741 12.2298 16.7333 12.0867 16.7333 11.9376V0.687556C16.7333 0.538376 16.6741 0.395311 16.5686 0.289825C16.4631 0.184339 16.32 0.125071 16.1708 0.125056L4.92079 0.125Z" fill="white"/>
             </svg>                    
-          </a>
-        </div>
-        <div class="benefits__card">
+          </div>
+        </a>
+        <a class="benefits__card" href="">
           <img src="@img/benefits-3.png" alt="">
           <h4 class="benefits__caption">Veraview X800</h4>
           <div class="benefits__txt">Дизайн и функциональность Veraview X800, за что он получил золотую награду IF Gold Award</div>
-          <a href="" class="benefits__btn button">
+          <div class="benefits__btn button">
             <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.92079 0.125C4.77161 0.125 4.62854 0.184263 4.52305 0.289752C4.41756 0.395242 4.35829 0.538316 4.35829 0.6875C4.35829 0.836684 4.41756 0.979758 4.52305 1.08525C4.62854 1.19074 4.77161 1.25 4.92079 1.25H14.8129L1.14811 14.9148C0.928496 15.1345 0.928496 15.4906 1.14811 15.7102C1.36777 15.9299 1.72388 15.9299 1.94354 15.7102L15.6083 2.04543V11.9376C15.6083 12.0867 15.6676 12.2298 15.7731 12.3353C15.8786 12.4408 16.0217 12.5001 16.1708 12.5001C16.32 12.5001 16.4631 12.4408 16.5686 12.3353C16.6741 12.2298 16.7333 12.0867 16.7333 11.9376V0.687556C16.7333 0.538376 16.6741 0.395311 16.5686 0.289825C16.4631 0.184339 16.32 0.125071 16.1708 0.125056L4.92079 0.125Z" fill="white"/>
             </svg>                    
-          </a>
-        </div>
+          </div>
+        </a>
       </div>
     </div>
   </div>
