--- a/src/html/branches.html
+++ b/src/html/branches.html
@@ -1,4 +1,4 @@
-<section class="branches section-pad-bottom">
+<section class="branches @@class">
   <div class="container">
     <div class="branches__container">
       <div class="branches__top">
