--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <!-- добавить классы для main врачей "main-doctor" -->
     <!-- добавить классы для main пациента "main-patient" -->
-    <main>
+    <main class="main-doctor">
       <section class="hero section-top section-pad-bottom">
         <div class="container">
           <div class="hero__container">
@@ -111,14 +111,14 @@
               <a class="knowledge__btn button button_light" href="#">Смотреть все</a>
               <div class="knowledge__arrows">
                 <div class="knowledge-arrow knowledge-button-prev">
-                  <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M20.7031 12.6094C20.9189 12.6094 21.0938 12.7843 21.0938 13C21.0938 13.2157 20.9189 13.3907 20.7031 13.3907H4.9959L10.5789 18.9738C10.7315 19.1263 10.7315 19.3737 10.5789 19.5262C10.4264 19.6788 10.1791 19.6788 10.0265 19.5262L4.19082 13.6905C3.80957 13.3092 3.80957 12.6908 4.19082 12.3095L10.0265 6.47379C10.1791 6.32124 10.4264 6.32124 10.5789 6.47379C10.7315 6.62633 10.7315 6.87368 10.5789 7.02622L4.9957 12.6094H20.7031Z" fill="white"/>
-                  </svg>                    
+                  <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0.199219 7.48827L6.04297 13.3789C6.3125 13.6484 6.75 13.6523 7.01953 13.3828C7.28906 13.1133 7.29297 12.6758 7.02344 12.4062L2.34766 7.6914L19.3086 7.6914C19.6914 7.6914 20 7.3828 20 6.99999C20 6.61718 19.6914 6.30858 19.3086 6.30858L2.34766 6.30858L7.02344 1.59374C7.29297 1.32421 7.28906 0.886708 7.01953 0.617177C6.75 0.347646 6.3125 0.351552 6.04297 0.621084L0.199219 6.51171C-0.0664062 6.78124 -0.0664062 7.21874 0.199219 7.48827Z" fill="white"/>
+                  </svg>                                       
                 </div>
                 <div class="knowledge-arrow knowledge-button-next">
-                  <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.29688 13.3906C4.08113 13.3906 3.90625 13.2157 3.90625 13C3.90625 12.7843 4.08113 12.6093 4.29688 12.6093L20.0041 12.6093L14.4211 7.02622C14.2685 6.87368 14.2685 6.62634 14.4211 6.4738C14.5736 6.32124 14.8209 6.32124 14.9735 6.4738L20.8092 12.3095C21.1904 12.6908 21.1904 13.3092 20.8092 13.6905L14.9735 19.5262C14.8209 19.6788 14.5736 19.6788 14.4211 19.5262C14.2685 19.3737 14.2685 19.1263 14.4211 18.9738L20.0043 13.3906L4.29688 13.3906Z" fill="white"/>
-                  </svg>                    
+                  <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.8008 6.51173L13.957 0.621104C13.6875 0.351573 13.25 0.347667 12.9805 0.617198C12.7109 0.886729 12.707 1.32423 12.9766 1.59376L17.6523 6.3086H0.691406C0.308594 6.3086 0 6.6172 0 7.00001C0 7.38282 0.308594 7.69142 0.691406 7.69142H17.6523L12.9766 12.4063C12.707 12.6758 12.7109 13.1133 12.9805 13.3828C13.25 13.6524 13.6875 13.6484 13.957 13.3789L19.8008 7.48829C20.0664 7.21876 20.0664 6.78126 19.8008 6.51173Z" fill="white"/>
+                  </svg>                                        
                 </div>
               </div>
             </div>
@@ -140,7 +140,7 @@
         </div>
       </section>
       @@include('html/webinar.html')
-      @@include('html/branches.html') 
+      @@include('html/branches.html', { "class": "section-pad-bottom" }) 
       @@include('html/feedback.html') 
     </main>
 
