--- a/src/services-doctor.html
+++ b/src/services-doctor.html
@@ -4,7 +4,9 @@
   <body>
     @@include('html/header.html')
 
-    <main>
+    <!-- добавить классы для main врачей "main-doctor" -->
+     <!-- добавить классы для main пациента "main-patient" -->
+    <main class="main-doctor">
       @@include('html/breadcrumbs.html', { "title": "Услуги" }) 
       <section class="services-page section-pad-bottom">
         <div class="container">
