--- a/src/services-ct.html
+++ b/src/services-ct.html
@@ -119,7 +119,7 @@
         <div class="container">
           <div class="services-diagnostics__container">
             <h2 class="services-diagnostics__title title-up">Как проходит диагностика?</h2>
-            <a class="services-diagnostics__video video" href="">
+            <a class="services-diagnostics__video video" data-fancybox href="https://youtu.be/krDWc30PAGg?si=hi0BgOOTnJCy66kL">
               <img src="@img/diagn.png" alt="">
             </a>
           </div>
