--- a/src/services-inner.html
+++ b/src/services-inner.html
@@ -10,7 +10,7 @@
     <main class="main main-doctor column">
       @@include('html/breadcrumbs.html', { "title": "Снимок ЧЛО" }) 
       <div class="container">
-        <div class="main__container">
+        <div class="main__container main-services__container">
           <div class="sections">
             <section class="services-inner section-pad-bottom">
               <div class="services-inner__container">
