--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div class="container">
           <div class="hero__container">
             <div class="hero__slider">
-              <div class="swiper doctorsSwiper">
+              <div class="swiper heroSwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide hero__slide">
                     <div class="hero__title title-color"><h1>Сеть <strong>независимых</strong> диагностических центров</h1></div>
@@ -29,7 +29,7 @@
                     <div class="hero__img"><img src="@img/hero-person-3.png" alt="Person 3"></div>
                   </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination hero-pagination"></div>
               </div>
             </div>
             <a class="hero__btn button button_light">
