--- a/src/services-ct.html
+++ b/src/services-ct.html
@@ -51,23 +51,30 @@
       <section class="services-combo section-pad-bottom">
         <div class="container">
           <div class="services-combo__container">
-            <h2 class="services-combo__title title-up">Комбо исследования помогут сэкономить</h2>
+            <div class="services-combo__top">
+              <h2 class="services-combo__title title-up">Комбо исследования помогут сэкономить</h2>
+              <div class="services-combo__arrows">
+                <div class="services-combo-button services-combo-button-prev">
+                  <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0.199219 7.48827L6.04297 13.3789C6.3125 13.6484 6.75 13.6523 7.01953 13.3828C7.28906 13.1133 7.29297 12.6758 7.02344 12.4062L2.34766 7.6914L19.3086 7.6914C19.6914 7.6914 20 7.3828 20 6.99999C20 6.61718 19.6914 6.30858 19.3086 6.30858L2.34766 6.30858L7.02344 1.59374C7.29297 1.32421 7.28906 0.886708 7.01953 0.617177C6.75 0.347646 6.3125 0.351552 6.04297 0.621084L0.199219 6.51171C-0.0664062 6.78124 -0.0664062 7.21874 0.199219 7.48827Z" fill="#312D2D"/>
+                  </svg>                                       
+                </div>
+                <div class="services-combo-button services-combo-button-next">
+                  <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19.8008 6.51173L13.957 0.621104C13.6875 0.351573 13.25 0.347667 12.9805 0.617198C12.7109 0.886729 12.707 1.32423 12.9766 1.59376L17.6523 6.3086H0.691406C0.308594 6.3086 0 6.6172 0 7.00001C0 7.38282 0.308594 7.69142 0.691406 7.69142H17.6523L12.9766 12.4063C12.707 12.6758 12.7109 13.1133 12.9805 13.3828C13.25 13.6524 13.6875 13.6484 13.957 13.3789L19.8008 7.48829C20.0664 7.21876 20.0664 6.78126 19.8008 6.51173Z" fill="#312D2D"/>
+                  </svg>                    
+                </div>
+              </div>
+            </div>
             <div class="services-combo__slider">
               <div class="swiper comboSwiper">
                 <div class="swiper-wrapper">
                   @@include('html/servicesComboCard.html') 
                   @@include('html/servicesComboCard.html') 
                   @@include('html/servicesComboCard.html') 
-                </div>
-                <div class="swiper-button-next combo-button-next">
-                  <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M19.8008 6.51173L13.957 0.621104C13.6875 0.351573 13.25 0.347667 12.9805 0.617198C12.7109 0.886729 12.707 1.32423 12.9766 1.59376L17.6523 6.3086H0.691406C0.308594 6.3086 0 6.6172 0 7.00001C0 7.38282 0.308594 7.69142 0.691406 7.69142H17.6523L12.9766 12.4063C12.707 12.6758 12.7109 13.1133 12.9805 13.3828C13.25 13.6524 13.6875 13.6484 13.957 13.3789L19.8008 7.48829C20.0664 7.21876 20.0664 6.78126 19.8008 6.51173Z" fill="#312D2D"/>
-                  </svg>                    
-                </div>
-                <div class="swiper-button-prev combo-button-prev">
-                  <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.199219 7.48827L6.04297 13.3789C6.3125 13.6484 6.75 13.6523 7.01953 13.3828C7.28906 13.1133 7.29297 12.6758 7.02344 12.4062L2.34766 7.6914L19.3086 7.6914C19.6914 7.6914 20 7.3828 20 6.99999C20 6.61718 19.6914 6.30858 19.3086 6.30858L2.34766 6.30858L7.02344 1.59374C7.29297 1.32421 7.28906 0.886708 7.01953 0.617177C6.75 0.347646 6.3125 0.351552 6.04297 0.621084L0.199219 6.51171C-0.0664062 6.78124 -0.0664062 7.21874 0.199219 7.48827Z" fill="#312D2D"/>
-                  </svg>                                       
+                  @@include('html/servicesComboCard.html') 
+                  @@include('html/servicesComboCard.html') 
+                  @@include('html/servicesComboCard.html') 
                 </div>
               </div>
             </div>
